Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80044

qtwayland deprecated warnings about QWindowSystemInterface::handleMouseEvent

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.0 Alpha
    • 5.14.0 Beta3
    • QPA: Wayland
    • None
    • eaf72c8ffdcdc6e9a3e1e3d67bf09db1dabe7af6 (qt/qtwayland/5.15)

    Description

      /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp: In member function ‘void QtWaylandClient::QWaylandWindow::handleMouse(QtWaylandClient::QWaylandInputDevice*, const QtWaylandClient::QWaylandPointerEvent&)’:
      /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp:879:122: warning: ‘static void QWindowSystemInterface::handleMouseEvent(QWindow*, ulong, const QPointF&, const QPointF&, Qt::MouseButtons, Qt::KeyboardModifiers, Qt::MouseEventSource) [with Delivery = QWindowSystemInterface::DefaultDelivery; ulong = long unsigned int; Qt::MouseButtons = QFlags<Qt::MouseButton>; Qt::KeyboardModifiers = QFlags<Qt::KeyboardModifier>]’ is deprecated [-Wdeprecated-declarations]
        879 |                 QWindowSystemInterface::handleMouseEvent(window(), e.timestamp, e.local, e.global, e.buttons, e.modifiers);
            |                                                                                                                          ^
      In file included from /home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtGui/5.14.0/QtGui/qpa/qwindowsysteminterface.h:1,
                       from /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandinputdevice_p.h:63,
                       from /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp:45:
      /home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtGui/5.14.0/QtGui/qpa/../../../../../../../../../src/qt/qt5/qtbase/src/gui/kernel/qwindowsysteminterface.h:85:31: note: declared here
         85 |     QT_DEPRECATED static void handleMouseEvent(QWindow *window, ulong timestamp, const QPointF &local, const QPointF &global, Qt::MouseButtons b,
            |                               ^~~~~~~~~~~~~~~~
      /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp:879:122: warning: ‘static void QWindowSystemInterface::handleMouseEvent(QWindow*, ulong, const QPointF&, const QPointF&, Qt::MouseButtons, Qt::KeyboardModifiers, Qt::MouseEventSource) [with Delivery = QWindowSystemInterface::DefaultDelivery; ulong = long unsigned int; Qt::MouseButtons = QFlags<Qt::MouseButton>; Qt::KeyboardModifiers = QFlags<Qt::KeyboardModifier>]’ is deprecated [-Wdeprecated-declarations]
        879 |                 QWindowSystemInterface::handleMouseEvent(window(), e.timestamp, e.local, e.global, e.buttons, e.modifiers);
            |                                                                                                                          ^
      In file included from /home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtGui/5.14.0/QtGui/qpa/qwindowsysteminterface.h:1,
                       from /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandinputdevice_p.h:63,
                       from /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp:45:
      /home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtGui/5.14.0/QtGui/qpa/../../../../../../../../../src/qt/qt5/qtbase/src/gui/kernel/qwindowsysteminterface.h:85:31: note: declared here
         85 |     QT_DEPRECATED static void handleMouseEvent(QWindow *window, ulong timestamp, const QPointF &local, const QPointF &global, Qt::MouseButtons b,
            |                               ^~~~~~~~~~~~~~~~
      /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp:872:16: warning: enumeration value ‘Leave’ not handled in switch [-Wswitch]
        872 |         switch (e.type) {
            |                ^
      /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp: In member function ‘void QtWaylandClient::QWaylandWindow::handleMouseEventWithDecoration(QtWaylandClient::QWaylandInputDevice*, const QtWaylandClient::QWaylandPointerEvent&)’:
      /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp:942:138: warning: ‘static void QWindowSystemInterface::handleMouseEvent(QWindow*, ulong, const QPointF&, const QPointF&, Qt::MouseButtons, Qt::KeyboardModifiers, Qt::MouseEventSource) [with Delivery = QWindowSystemInterface::DefaultDelivery; ulong = long unsigned int; Qt::MouseButtons = QFlags<Qt::MouseButton>; Qt::KeyboardModifiers = QFlags<Qt::KeyboardModifier>]’ is deprecated [-Wdeprecated-declarations]
        942 |                 QWindowSystemInterface::handleMouseEvent(window(), e.timestamp, localTranslated, globalTranslated, e.buttons, e.modifiers);
            |                                                                                                                                          ^
      In file included from /home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtGui/5.14.0/QtGui/qpa/qwindowsysteminterface.h:1,
                       from /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandinputdevice_p.h:63,
                       from /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp:45:
      /home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtGui/5.14.0/QtGui/qpa/../../../../../../../../../src/qt/qt5/qtbase/src/gui/kernel/qwindowsysteminterface.h:85:31: note: declared here
         85 |     QT_DEPRECATED static void handleMouseEvent(QWindow *window, ulong timestamp, const QPointF &local, const QPointF &global, Qt::MouseButtons b,
            |                               ^~~~~~~~~~~~~~~~
      /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp:942:138: warning: ‘static void QWindowSystemInterface::handleMouseEvent(QWindow*, ulong, const QPointF&, const QPointF&, Qt::MouseButtons, Qt::KeyboardModifiers, Qt::MouseEventSource) [with Delivery = QWindowSystemInterface::DefaultDelivery; ulong = long unsigned int; Qt::MouseButtons = QFlags<Qt::MouseButton>; Qt::KeyboardModifiers = QFlags<Qt::KeyboardModifier>]’ is deprecated [-Wdeprecated-declarations]
        942 |                 QWindowSystemInterface::handleMouseEvent(window(), e.timestamp, localTranslated, globalTranslated, e.buttons, e.modifiers);
            |                                                                                                                                          ^
      In file included from /home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtGui/5.14.0/QtGui/qpa/qwindowsysteminterface.h:1,
                       from /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandinputdevice_p.h:63,
                       from /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp:45:
      /home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtGui/5.14.0/QtGui/qpa/../../../../../../../../../src/qt/qt5/qtbase/src/gui/kernel/qwindowsysteminterface.h:85:31: note: declared here
         85 |     QT_DEPRECATED static void handleMouseEvent(QWindow *window, ulong timestamp, const QPointF &local, const QPointF &global, Qt::MouseButtons b,
            |                               ^~~~~~~~~~~~~~~~
      /home/tjmaciei/src/qt/qt5/qtwayland/src/client/qwaylandwindow.cpp:935:16: warning: enumeration value ‘Leave’ not handled in switch [-Wswitch]
        935 |         switch (e.type) {
            |                ^
      

      Caused by a37785ec7638e7485112b87dd7e767881fecc114 (5.11!)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johanhelsing Johan Helsing
            thiago Thiago Macieira
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes