src/client/qwaylandinputdevice_p.h
@@ -401,29 +401,21 @@ class QWaylandPointerEvent
 {
     Q_GADGET
 public:
-    enum Type {
-        Enter,
-        Leave,
-        Motion,
-        Press,
-        Release,
-        Wheel
-    };
-    Q_ENUM(Type)
-
-    inline QWaylandPointerEvent(Type type, Qt::ScrollPhase phase, QWaylandWindow *surface,
+    inline QWaylandPointerEvent(QEvent::Type type, Qt::ScrollPhase phase, QWaylandWindow *surface,
                                 ulong timestamp, const QPointF &localPos, const QPointF &globalPos,
-                                Qt::MouseButtons buttons, Qt::KeyboardModifiers modifiers)
+                                Qt::MouseButtons buttons, Qt::MouseButton button,
+                                Qt::KeyboardModifiers modifiers)
         : type(type)
         , phase(phase)
         , timestamp(timestamp)
         , local(localPos)
         , global(globalPos)
         , buttons(buttons)
+        , button(button)
         , modifiers(modifiers)
         , surface(surface)
     {}
-    inline QWaylandPointerEvent(Type type, Qt::ScrollPhase phase, QWaylandWindow *surface,
+    inline QWaylandPointerEvent(QEvent::Type type, Qt::ScrollPhase phase, QWaylandWindow *surface,
                                 ulong timestamp, const QPointF &local, const QPointF &global,
                                 const QPoint &pixelDelta, const QPoint &angleDelta,
                                 Qt::MouseEventSource source,
@@ -440,12 +432,13 @@ public:
         , surface(surface)
     {}
 
-    Type type;
+    QEvent::Type type = QEvent::None;
     Qt::ScrollPhase phase = Qt::NoScrollPhase;
     ulong timestamp = 0;
     QPointF local;
     QPointF global;
     Qt::MouseButtons buttons;
+    Qt::MouseButton button = Qt::NoButton; // Button that caused the event (QMouseEvent::button)
     Qt::KeyboardModifiers modifiers;
     QPoint pixelDelta;
     QPoint angleDelta;
